cmake_minimum_required(VERSION 3.5)

project(OpenCVAssignments)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O3 -march=native -std=c++17")

function(add_code name)
    find_package(OpenCV REQUIRED)
    add_executable(${name} ${CMAKE_CURRENT_SOURCE_DIR}/src/${name}.cpp)
    target_link_libraries(${name} ${OpenCV_LIBS})
endfunction()

#add_code(test1)
#add_code(test2)
#add_code(test3)
#add_code(test4)
#add_code(test5)
#add_code(test6)
#add_code(test7)
#add_code(test8)
#add_code(test9)
#add_code(test10)
#add_code(test11)
#add_code(test12)
#add_code(test13)
#add_code(test14)
#add_code(test15)
#add_code(test16)
add_code(test17)
